--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.3",
+    "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-reveal": "^1.2.2",
+    "react-leaflet": "^4.2.1",
     "react-slideshow-image": "^4.3.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
