--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.3",
+    "dotenv": "^16.3.2",
     "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
